2003-03-11  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* list.c, list.h (scm_filter, scm_filter_x): New functions.

	* modules.c (scm_module_import_interface): New function.

	* goops.c, goops.h (scm_class_accessor_method): Renamed from
	scm_class_accessor.
	(scm_class_accessor): New class.

2003-03-06  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.c (scm_primitive_generic_generic): Enable primitive
	generic if not enabled.
	(scm_sys_goops_loaded): Setup unextended primitive generics.

	* goops.c, goops.h (scm_c_extend_primitive_generic): New function.

	* snarf.h (SCM_PRIMITIVE_GENERIC, SCM_PRIMITIVE_GENERIC_1): New
	snarf macros.

	* numbers.c (scm_abs): Use SCM_PRIMITIVE_GENERIC.  (This is only a
	testing example.  All uses of SCM_GPROC should be converted.)

	* procprop.c (scm_stand_in_scm_proc): Use scm_assq instead of
	scm_assoc.

	* eq.c (scm_equal_p): Turned into a primitive generic.

2003-02-27  Rob Browning  <rlb@defaultvalue.org>

	* Makefile.am (scmconfig.h): new target -- generate file from
	../config.h.
	(modinclude_HEADERS): remove version.h.
	(nodist_modinclude_HEADERS): add version.h.

2003-02-24  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	This fixes a serious GC bug, introduced during the latest
	reorganization of the GC, which disabled freeing of structs and
	GOOPS objects:

	* struct.c (scm_struct_prehistory): Init scm_i_structs_to_free to
	SCM_EOL.
	(scm_struct_prehistory): Move scm_free_structs to
	scm_before_mark_c_hook.

	* gc-card.c (sweep_card): Check that we haven't swept structs on
	this card before.  That can happen if scm_i_sweep_all_segments has
	been called from some other place than scm_igc.

2003-02-19  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* environments.c (DEFAULT_OBARRAY_SIZE): Changed from 137 to 31
	(since hash tables now adapt their size).

	* modules.c (scm_modules_prehistory): Changed from 2001 to 1533
	(current number of prehistory bindings; hashtable code will select